apps/nowcasting-app/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import "./toastify.css";

.recharts-surface {
  overflow: visible;
}

.btn {
  @apply inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-mapbox-black bg-ocf-yellow hover:bg-ocf-yellow-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-ocf-delta-500;
}

.pv-map a.mapboxgl-ctrl-logo, .delta-map a.mapboxgl-ctrl-logo {
  margin-left: 0.5rem;
}

.pv-map .mapboxgl-popup-content, .delta-map .mapboxgl-popup-content {
  background: rgba(0,0,0,0.75);
  color: white;
  padding: 0.5rem 0.75rem;
  border-radius: 0.5rem 0.5rem 0 0.5rem;
}

.pv-map .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip, .delta-map .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
  border-top-color: rgba(0,0,0,0.5);
}

.up-arrow, .down-arrow {
  content: "";
  display: inline-block;
  height: 0;
  width: 0;
  border-color: transparent;
  margin-bottom: 1px;
}

.up-arrow {
  border-width: 0 0.4rem 0.7rem;
  border-bottom-color: theme('colors.ocf-delta.900');
}

.down-arrow {
  border-width: 0.7rem 0.4rem 0;
  border-top-color: theme('colors.ocf-delta.100');
}

.chart-data-loading-message:hover .chart-data-loading-endpoints {
  display: block;
}

.fade-out {
  opacity: 1;
  animation: fade-out 2s ease-in-out forwards;
}

@keyframes fade-out {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.toggle {
  @apply inline-flex items-center relative w-6 h-2 rounded-full bg-ocf-yellow
  border border-ocf-yellow/0 transition-all duration-100 ease-in-out delay-0 cursor-pointer
  bg-opacity-25 checked:bg-opacity-100 after:-ml-0.5 checked:after:ml-0 checked:after:-mr-0.5
  checked:bg-none checked:text-ocf-yellow
  focus:outline-none focus:ring-0 focus:ring-offset-0 focus:ring-offset-transparent focus:ring-transparent
  after:will-change-transform after:transition-all after:duration-200 after:ease-in-out after:inline-flex
  after:content-[''] after:bg-white after:border-ocf-gray-300 after:border after:rounded-full after:h-3 after:w-3
  checked:after:translate-x-full checked:after:border-white;
}

.custom-select {
  /*min-width: 350px;*/
  position: relative;
}

.custom-select select {
  appearance: none;
  width: 100%;
  height: 100%;
  padding: 0.25em 0.5em 0.25em 0.5em;
  background: transparent;
  border: 1px solid #FF9736;
  border-radius: 0.25rem;
  cursor: pointer;
}

.custom-select::before,
.custom-select::after {
  --size: 0.25rem;
  position: absolute;
  content: "";
  right: 0.5rem;
  pointer-events: none;
}

.custom-select::after {
  border-left: var(--size) solid transparent;
  border-right: var(--size) solid transparent;
  border-top: var(--size) solid white;
  top: calc(50% - var(--size) / 2);
}

.sometimes-bold::before {
  display: block;
  content: attr(title);
  font-weight: bold;
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

